--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "deno.enable": true,
+    "deno.enable": false,
     "deno.lint": false,
     "deno.unstable": true,
     "deno.config": "deno.jsonc",
