--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "module": "Node16",
         "moduleResolution": "Node16",
         "target": "es2020",
-        "lib": ["es2020"],
+        "lib": ["es2020", "DOM"],
 
         // required to import ".ts" files (for ts-node/esm, deno, and VSCode)
         "allowImportingTsExtensions": true,
@@ -16,6 +16,9 @@
         // required for allowImportingTsExtensions to work w/VSCode; pkgroll
         // doesn't work with emitDeclarationOnly, but works ok with noEmit)
         "noEmit": true,
+
+        // Don't document internals
+        "stripInternal": true,
     },
     "include": [
         "src/*.ts", "mod.ts"
