--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
             "README.md"
         ]
     },
+    "packageManager": "pnpm@7.33.6",
     "devDependencies": {
         "@knodes/typedoc-plugin-pages": "^0.23.4",
         "@knodes/typedoc-pluginutils": "^0.23.4",
