--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
         "@knodes/typedoc-plugin-pages": "^0.23.4",
         "@knodes/typedoc-pluginutils": "^0.23.4",
         "@types/chai": "^4.3.10",
+        "@types/chai-as-promised": "^7.1.8",
         "@types/mocha": "^10.0.4",
         "@types/node": "^16",
         "@types/sinon": "^17.0.1",
         "@types/sinon-chai": "^3.2.12",
         "c8": "^8.0.1",
         "chai": "^4.3.10",
+        "chai-as-promised": "^7.1.1",
         "mocha": "^10.2.0",
         "monkey-around": "^2.3.0",
         "onchange": "^7.1.0",
