--- a/typedoc/tsconfig.json
+++ b/typedoc/tsconfig.json
@@ -1,4 +1,8 @@
 {
+    "compilerOptions": {
+        "noImplicitAny": false,
+        "noImplicitThis": false
+    },
     "extends": "../tsconfig.json",
     "include": ["*.mts", "*.cts", "*.ts"]
 }
