--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "watch": "mocha -r tsx --watch",
         "watch-docs": "onchange -i --kill \"*.md\"  \"guides/**/*.md\" \"typedoc.config.*\" \"typedoc/*\" -- tsx typedoc/run.mts --watch",
         "test": "mocha -r tsx && pkgroll",
-        "prepare": "pkgroll --minify --sourcemap"
+        "prepare": "pkgroll --sourcemap"
     },
     "mocha": {
         "spec": "specs/*.spec.ts",
