--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "watch": "mocha -r tsx --watch",
         "watch-docs": "onchange -i --kill \"*.md\"  \"guides/**/*.md\" \"typedoc.config.*\" \"typedoc/*\" -- tsx typedoc/run.mts --watch",
         "test": "mocha -r tsx && pkgroll",
-        "prepare": "pkgroll --sourcemap"
+        "prepare": "pkgroll --sourcemap --clean-dist"
     },
     "mocha": {
         "spec": "specs/*.spec.ts",
@@ -55,7 +55,7 @@
         "mocha": "^10.2.0",
         "monkey-around": "^2.3.0",
         "onchange": "^7.1.0",
-        "pkgroll": "^2.0.1",
+        "pkgroll": "^2.1",
         "sinon": "^17.0.1",
         "sinon-chai": "^3.7.0",
         "ts-node": "^10.9.1",
