--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16.x
       - uses: pnpm/action-setup@v3
-      - run: pnpm install
+      - run: pnpm install && pnpm test
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
