Increased strictness of types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
     "compilerOptions": {
         // Project's typechecking options
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strict": false,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
+        "strict": true,
+        "strictNullChecks": false,
+        "strictPropertyInitialization": false,
 
         // These options support running tsx + ts-node
         "module": "Node16",
@@ -13,22 +11,8 @@
         "target": "es2021",
         "lib": ["es2021", "DOM"],
 
-        "experimentalDecorators": true,
 
-        // Ensure CallableObject subclasses don't use ES2022 pre-declared
-        // fields.  These can apparently be quite slow in general (as described
-        // in https://stackoverflow.com/a/75779079/), but are *especially* bad
-        // for creating instances of CallableObject subclasses, as they force
-        // even more shape changes to happen than usual.  So this option speeds
-        // up signal object creation by around 3x.
-        //
-        // Luckily, as that post describes, V8 doesn't yet do any optimization
-        // on predeclared fields that it doesn't do for fields set in the
-        // constructor.  So avoiding them is a straight-up performance win right
-        // now, so long as you're not using any uninitialized fields.  (Also,
-        // this doesn't affect *users* of Uneventful, since CallableObject and
-        // its subclasses aren't exposed to them.
-        //
+        "experimentalDecorators": true,
         "useDefineForClassFields": false,
 
         // required to import ".ts" files (for ts-node/esm, deno, and VSCode)
@@ -42,6 +26,7 @@
         "stripInternal": true,
         "newLine": "lf"
     },
+    "exclude": ["./specs/*"],
     "include": [
         "./src/*.ts", "./mod.ts", "./specs/*.ts"
     ]
