--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
                 "default": "./dist/mod.mjs"
             }
         },
+        "./ext": {
+            "import": {
+                "types": "./dist/ext.d.ts",
+                "default": "./dist/ext.mjs"
+            }
+        },
         "./shared": {
             "import": {
                 "types": "./dist/shared.d.ts",
@@ -78,6 +84,7 @@
         "pkgroll": "^2.1.1",
         "sinon": "^17.0.1",
         "sinon-chai": "^3.7.0",
+        "ts-expect": "^1.3.0",
         "ts-node": "^10.9.1",
         "tsx": "^4.1.3",
         "typedoc": "0.28.1",
