--- a/package.json
+++ b/package.json
@@ -68,6 +68,10 @@
             "README.md"
         ]
     },
+    "ts-node": {
+        "esm": true,
+        "experimentalSpecifierResolution": "node"
+    },
     "packageManager": "pnpm@7.33.6",
     "devDependencies": {
         "@types/chai": "^4.3.10",
@@ -76,7 +80,7 @@
         "@types/node": "^16",
         "@types/sinon": "^17.0.1",
         "@types/sinon-chai": "^3.2.12",
-        "c8": "^8.0.1",
+        "c8": "^10",
         "chai": "^4.3.10",
         "chai-as-promised": "^7.1.1",
         "mocha": "^10.2.0",
@@ -86,7 +90,7 @@
         "sinon-chai": "^3.7.0",
         "ts-expect": "^1.3.0",
         "ts-node": "^10.9.1",
-        "tsx": "^4.1.3",
+        "tsx": "^4.6.1",
         "typedoc": "0.28.1",
         "typescript": "^5.4.5"
     }
