--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -14,10 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - run: npm i -g --force corepack && corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
-      - uses: pnpm/action-setup@v3.0.0
+          node-version: 18.x
+          cache: pnpm
       - run: pnpm install && pnpm run docs
       - uses: actions/upload-pages-artifact@v3
         with:
