--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
         "target": "es2021",
         "lib": ["es2021", "DOM"],
 
-
         "experimentalDecorators": true,
         "useDefineForClassFields": false,
 
@@ -25,6 +24,11 @@
         // Don't document internals
         "stripInternal": true,
         "newLine": "lf"
+    },
+    "ts-node": {
+        "esm": true,
+        "transpileOnly": true,
+        "experimentalSpecifierResolution": "node"
     },
     "exclude": ["./specs/*"],
     "include": [
