--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "devDependencies": {
         "@types/chai": "^4.3.10",
         "@types/chai-as-promised": "^7.1.8",
+        "@types/markdown-it": "^14.1.2",
+        "@types/markdown-it-footnote": "^3.0.4",
         "@types/mocha": "^10.0.4",
         "@types/node": "^16",
         "@types/sinon": "^17.0.1",
@@ -81,6 +83,7 @@
         "chai": "^4.3.10",
         "chai-as-promised": "^7.1.1",
         "cross-env": "^7.0.3",
+        "markdown-it-footnote": "^4.0.0",
         "mocha": "^10.2.0",
         "monkey-around": "^3",
         "pkgroll": "^2.1.1",
@@ -89,7 +92,7 @@
         "ts-expect": "^1.3.0",
         "ts-node": "^10.9.1",
         "tsx": "^4.6.1",
-        "typedoc": "0.28.2",
+        "typedoc": "pjeby/typedoc#no-merged-comments",
         "typescript": "^5.4.5"
     }
 }
